<resources>

    <string name="app_name">T~Line</string>

    <!--Prompts-->
    <string name="loading">Loading&#8230;</string>
    <string name="loading_more">Loading more&#8230;</string>
    <string name="loading_resources">Loading Resources&#8230;</string>
    <string name="prompt_welcome_prefix">Welcome\n %s</string>
    <string name="sample_text">Welcome to System</string>
    <string name="logout">Logout</string>
    <string name="action_logout">Logout</string>
    <string name="action_language_en">To English</string>
    <string name="action_language_ar">To Arabic</string>
    <string name="action_language">العربية</string>
    <string name="lbl_button_close">CLOSE</string>
    <string name="message_logout">Do yo want to logout?</string>

    <!--Errors-->
    <string name="error_no_network">No Network Available!</string>
    <string name="error_no_items_found">No Items Found!</string>
    <string name="error_loading_data">Error Loading Data!</string>

    <string name="action_timeline" translatable="false">Timeline</string>
    <string name="action_olx_egypt" translatable="false">\@OLXEgypt</string>
    <string name="action_android_dev" translatable="false">\@AndroidDev</string>
    <string name="prefix_screenname">\@%s</string>
    <string name="empty" />

</resources>
